Filter books by languages

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -21,7 +21,7 @@
   "search_filter_label_copyright_no": "No",
   "search_filter_label_copyright_unknown": "Unknown",
   "search_filter_btn_apply": "Apply",
-  "search_filter_title_author": "Authors alive between",
+  "search_filter_title_author": "Written",
   "search_filter_label_bc": "{year} BC",
   "search_filter_label_ad": "{year} AD",
   "search_filter_title_topic": "Topic",
